--- a/destructuring.html
+++ b/destructuring.html
@@ -1,14 +1,14 @@
 // Destructuring
 // Object Destructuring
 // const object = {
-// state: "Telangana",
-// country: "India",
-// president: 560,
+//   state: "Telangana",
+//   country: "India",
+//   president: 560,
 // };
 
 // let city = object.city;
 // if (!city) {
-// city = "Hyderabad";
+//   city = "Hyderabad";
 // }
 
 // const city = object.city ? object.city : "Hyderabad";
@@ -40,7 +40,86 @@
 // devil
 // rocket
 
-// OLD WAY! :
+// OLD WAY! :(
 // const fire = emojis[0];
 // const devil = emojis[1];
 // const rocket = emojis[2];
+
+// NEW WAY!! :D
+// const [fire, , rocket] = emojis;
+// console.log(fire, rocket);
+
+// const parent = {
+//   a: {
+//     b: {
+//       c: {
+//         d: 1,
+//       },
+//     },
+//   },
+// };
+
+// // const c = parent.a.b.c;
+// const {
+//   a: {
+//     b: {
+//       c: { d },
+//     },
+//   },
+// } = parent;
+// console.log(d);
+
+// function stuff([one, two, three]) {
+//   console.log(one, two, three);
+// }
+
+// stuff([10, 20, 30]);
+
+// const numbers = [1, 2, 3, 4, 5];
+
+// const [a, b, ...rest] = numbers;
+
+// console.log(rest);
+
+// const parent = { city: "Hyderabad", continent: "Asia", score: 100 };
+
+// const { city, ...rest } = parent;
+
+// console.log(rest);
+
+// Rest -> arrays -> rest array
+// Rest -> objects -> rest object
+
+// function stuff([a, ...rest]) {
+//   console.log(rest);
+// }
+
+// stuff([100, 200, 300]);
+
+function greet() {
+  console.log("Hello!");
+}
+
+const pm = "modi";
+
+const score = 160;
+
+// Shorthand properties
+const object = {
+  // greet: greet,
+  greet,
+  // pm: pm,
+  pm,
+  // score: score,
+  score,
+  //   smile: function () {
+  //     console.log("hehe");
+  //   },
+  smile() {
+    console.log("hehe");
+  },
+};
+
+object.smile();
+
+// /
