--- a/SignUp Page/successpage.html
+++ b/SignUp Page/successpage.html
@@ -1,20 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Screen Verification</title>
+    <title>Document</title>
 </head>
-
 <body>
-    <form>
-        <input type="text" id="pin" placeholder="Enter pin here ..." />
-        <button type="submit">Submit</button>
-    </form>
-
-    <script src="./script.js"></script>
+    <h1>Congrats Submitted Successfully</h1>
 </body>
-
 </html>
